NetBSD Problem Report #54610

From www@netbsd.org  Tue Oct  8 08:20:46 2019
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 2A3227A1EF
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  8 Oct 2019 08:20:46 +0000 (UTC)
Message-Id: <20191008082045.80FA97A252@mollari.NetBSD.org>
Date: Tue,  8 Oct 2019 08:20:45 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/kern/sys_ptrace_common.c:1264:34: style: Same expression
X-Send-Pr-Version: www-1.0

>Number:         54610
>Category:       kern
>Synopsis:       src/sys/kern/sys_ptrace_common.c:1264:34: style: Same expression
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kamil
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Oct 08 08:25:00 +0000 2019
>Closed-Date:    Tue Oct 08 12:34:08 +0000 2019
>Last-Modified:  Tue Oct 15 19:10:00 +0000 2019
>Originator:     David Binderman
>Release:        20191008
>Organization:
>Environment:
>Description:
src/sys/kern/sys_ptrace_common.c:1264:34: style: Same expression on both sides of '|'. [duplicateExpression]

Source code is

   if (lt->l_flag & (LW_WSUSPEND | LW_WSUSPEND)) {

Maybe better code:

  if (lt->l_flag &
                    (LW_WSUSPEND | LW_DBGSUSPEND)) {

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->kamil
Responsible-Changed-By: maya@NetBSD.org
Responsible-Changed-When: Tue, 08 Oct 2019 08:47:16 +0000
Responsible-Changed-Why:
ping most likely committer


From: "Kamil Rytarowski" <kamil@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54610 CVS commit: src/sys/kern
Date: Tue, 8 Oct 2019 12:29:57 +0000

 Module Name:	src
 Committed By:	kamil
 Date:		Tue Oct  8 12:29:57 UTC 2019

 Modified Files:
 	src/sys/kern: sys_ptrace_common.c

 Log Message:
 Correct the same expression on both sides of |

 PR sw-bug/54610 by David Binderman


 To generate a diff of this commit:
 cvs rdiff -u -r1.64 -r1.65 src/sys/kern/sys_ptrace_common.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: kamil@NetBSD.org
State-Changed-When: Tue, 08 Oct 2019 14:34:08 +0200
State-Changed-Why:
Fix committed in sys/kern/sys_ptrace_common.c r. 1.65


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54610 CVS commit: [netbsd-9] src/sys/kern
Date: Tue, 15 Oct 2019 19:07:14 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Oct 15 19:07:14 UTC 2019

 Modified Files:
 	src/sys/kern [netbsd-9]: sys_ptrace_common.c

 Log Message:
 Pull up following revision(s) (requested by kamil in ticket #323):

 	sys/kern/sys_ptrace_common.c: revision 1.65

 Correct the same expression on both sides of |
 PR sw-bug/54610 by David Binderman


 To generate a diff of this commit:
 cvs rdiff -u -r1.58.2.6 -r1.58.2.7 src/sys/kern/sys_ptrace_common.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.43 2018/01/16 07:36:43 maya Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2017 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.