Correct the same expression on both sides of |

PR sw-bug/54610 by David Binderman